2007-07-12  mefyl  <mefyl@lrde.epita.fr>

	Warn on use of operator ^. Add operator **.
	* src/parser/uparser.cc,
	* src/parser/uparser.hh: Add a mehod to emit warnings.
	* src/parser/bison/utoken.l: Emit warnings on ^.
        Scan ** as exponent operator.
	* src/uconnection.cc,
	* src/uexpression.cc: Report warnings through the connection.

2007-07-12  mefyl  <mefyl@lrde.epita.fr>

	Fix logic operators precedence.
	* src/parser/bison/ugrammar.y: Here.

2007-07-01  Jean-Christophe Baillie  <baillie@gostai.com>

	This time, we use a cache mechanism to hold the current cycle variable
	value.

	Fix ticket #111 (again). 
	* src/ucommand.cc: use cyclevalue with a cache mechanism to initialize
	startval.
	* src/uvariable.cc: init cycleBeginTime to an impossible value (-1).
	* src/uvariable.hh: declare cycleBeginTime and cyclevalue.

2007-07-01  Jean-Christophe Baillie  <baillie@gostai.com>

	This is a backward move that reintroduces ticket 111, but it will fix
	a much bigger problem where Aldeb is currently stuck. A future better
	fix of 111 is on the way.

	Fix bug aldeb before robocup. 
	* src/ucommand.cc: reset old code.

2007-07-01  Jean-Christophe Baillie  <baillie@gostai.com>

	UVar::reset can be used to set both the value and the previousval of a
	UVariable, which does a "deep" reset of this value.

	add support for UVar::reset. 
	* src/uvar.cc: done.

2007-05-31  Matthieu Nottale  <nottale@gostai.com>

	Fix a bug in timeout command
	* src/ucommand.cc: in UCommand_TIMEOUT::execute: setTag on intermediate nodes instead of morphed node.

2007-05-29  Guillaume Deslandes  <deslandes@gostai.com>

	Wrong token definition for derivations
	* ugrammar.y: Fixed definition for first and second derivation.

2007-05-29  Matthieu Nottale  <nottale@gostai.com>

	Add the 'runningcommands' keyword, fix a bug in tag mechanism.
	* parser/bison/utoken.l: Add the runningcommands keyword.
	* ucommand.cc: Implement runningcommands.